[tool.poetry]
name = "alexa-musicast"
version = "0.1.0"
description = "Simple project to control my Yamaha device with alexa"
authors = ["hkxs <lalvarezf25@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
